--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.18",
     "@zeit/next-typescript": "^1.1.1",
+    "babel-eslint": "^10.0.1",
     "eslint": "^5.12.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-config-standard-react": "^7.0.2",
@@ -36,8 +37,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-typescript": "^0.14.0",
     "husky": "^1.3.1",
-    "typescript": "^3.2.2",
-    "typescript-eslint-parser": "20.0.0"
+    "typescript": "^3.2.2"
   },
   "husky": {
     "hooks": {
