--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "moduleResolution": "node",
+    "resolveJsonModule": true,
     "jsx": "react",
     "target": "es2016",
     "noImplicitAny": true,
@@ -15,6 +16,7 @@
   },
   "include": [
     "pages",
-    "components"
+    "components",
+    "index.d.ts"
   ]
 }
